fix: dim menu shortcut & better server name spacing

--- a/src/content/header/sidebar-server.scss
+++ b/src/content/header/sidebar-server.scss
@@ -60,5 +60,7 @@
 	@extend %title-2;
 
 	color: inherit;
+	line-height: 1;
+	padding-inline: var(--spacing);
 	margin: auto;
 }
