--- a/src/popovers/menu.scss
+++ b/src/popovers/menu.scss
@@ -27,6 +27,10 @@
 	margin-inline-start: calc(var(--spacing) + popover.$icon-size - 2px);
 }
 
+.hintContainer_c1e9c4 {
+	color: var(--window_fg_muted);
+}
+
 .icon_c1e9c4 {
 	display: none;
 }
